# attrimotif

./: .gitignore  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  codemeta.json  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: ci.yml
api/: index.html
docs/: api.md  examples.md  index.md
examples/: example1_planted_tail.py  example2_null_identifiability.py  example3_synthetic_panel.py  example4_movielens.py  index.html  run_all.py
search/: search_index.json
src/attrimotif/: __init__.py  census.py  compare.py  datasets.py  graph.py  nulls.py  typed.py
tests/: test_census.py  test_compare.py  test_datasets.py  test_typed_nulls.py
