[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "attrimotif"
version = "1.0.0"
description = "An attributed directed bipartite motif inference workflow in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tengfei Shao", email = "shaotengfei123@gmail.com" }]
keywords = [
    "network motifs",
    "bipartite networks",
    "node attributes",
    "null models",
    "portrait divergence",
    "reproducible research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.21", "scipy>=1.7", "networkx>=2.6"]

[project.optional-dependencies]
netrd = ["netrd>=0.3"]
dev = ["pytest>=7", "matplotlib>=3.4"]

[project.urls]
Homepage = "https://github.com/Waahi/attrimotif"
Repository = "https://github.com/Waahi/attrimotif"

[tool.setuptools]
packages = ["attrimotif"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
